still can't figure out how to move description field below map, so as temporary measure to stop text overlapping, changed hackSpotsTable min-width of 900 px to max-width of 530 px in site.css

--- a/css/site.css
+++ b/css/site.css
@@ -53,7 +53,7 @@ ul.nav li a:hover {border-bottom: 1px #FD9393 solid;}
 #info {border-top: 4px #F8F8F8 solid;}
 
 #hackSpotsTable {cursor: pointer; background: #fff; overflow-x: auto; padding-bottom: 20px;}
-#hackSpotsTable table {min-width: 900px;}
+#hackSpotsTable table {max-width: 530px;} 
 #hackSpotsTable .tHeader:hover {color: #FF4646;}
 .tHeader::after {content: " \2193 \2191 "; font-size: 10px; padding-left: 3px;}
 .spotRow:hover {color: #FF4646;}
